Work on fixing imports

--- a/CMakeLIsts.txt
+++ b/CMakeLIsts.txt
@@ -38,9 +38,9 @@ add_library(ThaumiumDLL SHARED
         #Graphics
 
         #NGui
-        "nms/Graphics/NGui/AltMode.h"
-        "nms/Graphics/NGui/Animate.h"
-        "nms/Graphics/NGui/Curve.h"
+        "nms/Graphics/AltMode.h"
+        "nms/Graphics/Animate.h"
+        "nms/Graphics/Curve.h"
         "nms/Graphics/NGui/GcNGuiElement.h"
         "nms/Graphics/NGui/GcNGuiElement.cpp"
         "nms/Graphics/NGui/GcNGuiLayer.h"
@@ -50,19 +50,19 @@ add_library(ThaumiumDLL SHARED
         "nms/Graphics/NGui/GcNGuiPresetText.h"
         "nms/Graphics/NGui/GcNGuiText.h"
         "nms/Graphics/NGui/GcNGuiText.cpp"
-        "nms/Graphics/NGui/Gradient.h"
-        "nms/Graphics/NGui/Horizontal.h"
+        "nms/Graphics/Gradient.h"
+        "nms/Graphics/Horizontal.h"
         "nms/Graphics/NGui/NGuiAnimationEvent.h"
         "nms/Graphics/NGui/NGuiEditorIcons.h"
         "nms/Graphics/NGui/NGuiForcedStyle.h"
         "nms/Graphics/NGui/NGuiInputType.h"
-        "nms/Graphics/NGui/Shape.h"
-        "nms/Graphics/NGui/Vertical.h"
+        "nms/Graphics/Shape.h"
+        "nms/Graphics/Vertical.h"
 
         "nms/Graphics/NGui/Options/GcBooleanOption.h"
         "nms/Graphics/NGui/Options/GcBooleanOption.cpp"
         "nms/Graphics/NGui/Options/GcFrontendPageOptions.h"
-        "nms/Graphics/NGui/Options/Option.h"
+        "nms/Graphics/NGui/Options/GcOption.h"
         "nms/Graphics/NGui/Options/GcOptionsInteractionContext.h"
         "nms/Graphics/NGui/Options/GcOptionsInteractionContext.cpp"
         "nms/Graphics/NGui/Options/GcOptionsMenuState.h"
