--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -4,7 +4,7 @@
       "name": "Upstream",
       "generator": "Ninja",
       "configurationType": "RelWithDebInfo",
-      "inheritEnvironments": [ "msvc_x64_x64" ],
+      "inheritEnvironments": [ "clang_cl_x64_x64" ],
       "buildRoot": "${projectDir}\\build",
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "buildCommandArgs": "",
