Move Memory and Hook modules

--- a/CMakeLIsts.txt
+++ b/CMakeLIsts.txt
@@ -40,10 +40,6 @@ add_library(ThaumiumDLL SHARED
         "common/utilities/filesystem/TkFileSystem.h"
         "common/utilities/spookyhash/SpookyV2.h"
         "common/utilities/spookyhash/SpookyV2.cpp"
-        "common/utilities/Hooks.h"
-        "common/utilities/Hooks.cpp"
-        "common/utilities/Memory.h"
-        "common/utilities/Memory.cpp"
         "common/utilities/TkAlignedBlock.h"
         "common/utilities/TkArray.h"
         "common/utilities/TkLinearHashTable.h"
@@ -78,8 +74,12 @@ add_library(ThaumiumDLL SHARED
         "thaumium/Core.cpp"
         "thaumium/GcURLHook.h"
         "thaumium/GcURLHook.cpp"
+        "thaumium/Hooks.h"
+        "thaumium/Hooks.cpp"
         "thaumium/MBINExport.h"
         "thaumium/MBINExport.cpp"
+        "thaumium/Memory.h"
+        "thaumium/Memory.cpp"
         "thaumium/TextChatHandler.h"
         "thaumium/TextChatHandler.cpp"
 )
