--- a/proxy/CMakeLists.txt
+++ b/proxy/CMakeLists.txt
@@ -1,11 +1,5 @@
-add_library(ThaumiumProxy SHARED
-	"dllmain.cpp"
-	"framework.h"
-	"exports.h"
-)
+add_library(ThaumiumProxy SHARED "dllmain.cpp" "exports.h" "framework.h")
 
 target_precompile_headers(ThaumiumProxy PRIVATE pch.h)
 
-set_target_properties(ThaumiumProxy PROPERTIES
-                      OUTPUT_NAME version
-)
+set_target_properties(ThaumiumProxy PROPERTIES OUTPUT_NAME version)
