Give up on really janky custom vector idea

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_library(
     "common/resources/TkResourceManager.h"
     "common/simulation/TkRigidBodyPtr.h"
     "common/simulation/TkSeed.h"
+    "common/system/AutoPooled.h"
     "common/system/thread/TkLockFreeQueue.h"
     "common/system/timer/TkClock.h"
     "common/system/TkIterationState.h"
@@ -89,6 +90,8 @@ add_library(
     "simulation/DiscoveryAutoSync.h"
     "simulation/GcSceneManager.h"
     "simulation/GcSimulation.h"
+    "simulation/particles/GcParticleManager.h"
+    "simulation/particles/HeavyAirType.h"
     "simulation/player/GcAvailableWeapons.h"
     "simulation/player/GcPlayer.h"
     "simulation/player/GcPlayerControlInput.cpp"
