--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,51 +16,60 @@ option(USEFRACTAL "Compile for Fractal 4.13 Debug" OFF)
 file(GLOB_RECURSE METADATA_SOURCE ${CMAKE_SOURCE_DIR}/metadata/source/*)
 file(GLOB_RECURSE METADATA_TOOLKIT ${CMAKE_SOURCE_DIR}/metadata/toolkit/*)
 
+set(TOOLKIT_SOURCES
+    ${CMAKE_SOURCE_DIR}/common/attachments/TkHandle.h
+    ${CMAKE_SOURCE_DIR}/common/graphics/TkColour.h/
+    ${CMAKE_SOURCE_DIR}/common/maths/TkAABB.h
+    ${CMAKE_SOURCE_DIR}/common/maths/TkBBox2d.h
+    ${CMAKE_SOURCE_DIR}/common/maths/TkMatrix34.h
+    ${CMAKE_SOURCE_DIR}/common/maths/TkPhysRelVec3.h
+    ${CMAKE_SOURCE_DIR}/common/maths/TkVector2.h
+    ${CMAKE_SOURCE_DIR}/common/maths/TkVector3.h
+    ${CMAKE_SOURCE_DIR}/common/maths/TkVector4.h
+    ${CMAKE_SOURCE_DIR}/common/metadata/TkClassPointer.h
+    ${CMAKE_SOURCE_DIR}/common/metadata/TkID.h
+    ${CMAKE_SOURCE_DIR}/common/metadata/TkMetaData.h
+    ${CMAKE_SOURCE_DIR}/common/metadata/TkMetaDataClass.h
+    ${CMAKE_SOURCE_DIR}/common/metadata/TkMetaDataXML.h
+    ${CMAKE_SOURCE_DIR}/common/resources/TkResource.h
+    ${CMAKE_SOURCE_DIR}/common/resources/TkResourceDescriptor.h
+    ${CMAKE_SOURCE_DIR}/common/resources/TkResourceManager.cpp
+    ${CMAKE_SOURCE_DIR}/common/resources/TkResourceManager.h
+    ${CMAKE_SOURCE_DIR}/common/resources/TkResourceRegistryEntry.h
+    ${CMAKE_SOURCE_DIR}/common/resources/TkSmartResHandle.h
+    ${CMAKE_SOURCE_DIR}/common/simulation/TkRigidBodyPtr.h
+    ${CMAKE_SOURCE_DIR}/common/simulation/TkSeed.h
+    ${CMAKE_SOURCE_DIR}/common/system/AutoPooled.h
+    ${CMAKE_SOURCE_DIR}/common/system/thread/TkLockFreeQueue.h
+    ${CMAKE_SOURCE_DIR}/common/system/timer/TkClock.h
+    ${CMAKE_SOURCE_DIR}/common/system/TkIterationState.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/allocators/TkStackAllocator.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/allocators/TkSTLAllocator.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/containers/TkClassPool.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/containers/TkFlatMap.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/containers/TkStackContainer.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/containers/TkStackVector.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/containers/TkVector.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/filesystem/TkFileSystem.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/pools/TkLinearMemoryPool.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/pools/TkMemoryPool.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/spookyhash/SpookyV2.cpp
+    ${CMAKE_SOURCE_DIR}/common/utilities/spookyhash/SpookyV2.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/TkAlignedBlock.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/TkArray.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/TkLinearHashTable.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/TkMemoryManager.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/TkString.h
+    ${CMAKE_SOURCE_DIR}/common/utilities/TkStrongType.h
+    ${CMAKE_SOURCE_DIR}/common/xml/XMLAttribute.h
+    ${CMAKE_SOURCE_DIR}/common/xml/XMLClear.h
+    ${CMAKE_SOURCE_DIR}/common/xml/XMLNode.h
+)
+
 # Thaumium
 add_library(
     ThaumiumDLL SHARED
-    "common/attachments/TkHandle.h"
-    "common/graphics/TkColour.h"
-    "common/maths/TkAABB.h"
-    "common/maths/TkBBox2d.h"
-    "common/maths/TkMatrix34.h"
-    "common/maths/TkPhysRelVec3.h"
-    "common/maths/TkVector2.h"
-    "common/maths/TkVector3.h"
-    "common/maths/TkVector4.h"
-    "common/metadata/TkClassPointer.h"
-    "common/metadata/TkID.h"
-    "common/resources/TkResource.h"
-    "common/resources/TkResourceDescriptor.h"
-    "common/resources/TkResourceManager.cpp"
-    "common/resources/TkResourceManager.h"
-    "common/simulation/TkRigidBodyPtr.h"
-    "common/simulation/TkSeed.h"
-    "common/system/AutoPooled.h"
-    "common/system/thread/TkLockFreeQueue.h"
-    "common/system/timer/TkClock.h"
-    "common/system/TkIterationState.h"
-    "common/utilities/allocators/TkStackAllocator.h"
-    "common/utilities/allocators/TkSTLAllocator.h"
-    "common/utilities/containers/TkStackContainer.h"
-    "common/utilities/containers/TkStackVector.h"
-    "common/utilities/containers/TkVector.h"
-    "common/utilities/filesystem/FileOpenMode.h"
-    "common/utilities/filesystem/FIOS2HANDLE.h"
-    "common/utilities/filesystem/TkFileSystem.h"
-    "common/utilities/pools/TkLinearMemoryPool.h"
-    "common/utilities/pools/TkMemoryPool.h"
-    "common/utilities/spookyhash/SpookyV2.cpp"
-    "common/utilities/spookyhash/SpookyV2.h"
-    "common/utilities/TkAlignedBlock.h"
-    "common/utilities/TkArray.h"
-    "common/utilities/TkLinearHashTable.h"
-    "common/utilities/TkMemoryManager.h"
-    "common/utilities/TkString.h"
-    "common/utilities/TkStrongType.h"
-    "common/xml/XMLAttribute.h"
-    "common/xml/XMLClear.h"
-    "common/xml/XMLNode.h"
+    ${TOOLKIT_SOURCES}
     "dllmain.cpp"
     "dllmain.h"
     "framework.h"
@@ -71,9 +80,19 @@ add_library(
     "source/atlas/GcAtlasTransportWinHttp.h"
     "source/atlas/Http.h"
     "source/atlas/WinHttpTask.h"
+    "source/core/commands/commands.h"
     "source/core/core.cpp"
     "source/core/core.h"
+    "source/core/globals/application.cpp"
+    "source/core/globals/engine.cpp"
+    "source/core/globals/globals.h"
+    "source/core/globals/hash.h"
     "source/core/globals/lookup.cpp"
+    "source/core/globals/metadata.h"
+    "source/core/hooks.cpp"
+    "source/core/hooks.h"
+    "source/core/memory.cpp"
+    "source/core/memory.h"
     "source/engine/EgMain.cpp"
     "source/engine/EgMain.h"
     "source/engine/EgModules.h"
@@ -90,6 +109,7 @@ add_library(
     "source/network/GcNetworkMessageManager.h"
     "source/network/GcTextChatInput.h"
     "source/network/GcTextChatManager.h"
+    "source/network/GcURL.h"
     ${METADATA_SOURCE}
     ${METADATA_TOOLKIT}
 )
