--- a/metadata/CMakeLists.txt
+++ b/metadata/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Metadata
 add_library(
-    Heridium
+    Heridium SHARED
+    # ${TOOLKIT_SOURCES}
     "dllmain.cpp"
     "dump.cpp"
     "dump.h"
